--- a/src/app.css
+++ b/src/app.css
@@ -1,12 +1,12 @@
 #app {
-  display: grid;
-  place-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   min-height: 100dvh;
 }
 
 form {
-  min-width: 60ch;
   padding: 1em !important;
   border-radius: 0.5rem;
-  background-color: antiquewhite;
+  background-color: blanchedalmond;
 }
