--- a/src/app.css
+++ b/src/app.css
@@ -9,4 +9,10 @@ form {
   padding: 1em !important;
   border-radius: 0.5rem;
   background-color: blanchedalmond;
+  flex: 1;
+  max-inline-size: 60ch;
+}
+
+button {
+  inline-size: 100%;
 }
